- allow urpmi to know a package was not selected because a newer version is
  installed (#29838)
- handle new package providing xxx which conflicts with an installed package (#17106)
- fix sort choices changed in perl-URPM 3.08
- allow fixing "using one big transaction" that occurs when using --keep 
  (#30198)
- do not add FILENAME_TAG and FILESIZE_TAG to hdlist anymore,
  deprecate ->filename and ->header_filename,
  deprecate URPM::Build build_hdlist and parse_rpms_build_headers

Version 3.08 - 25 February 2008, by Pascal "Pixel" Rigaux

- sort choices on virtual package by provided version (#12645)

Version 3.07 - 11 January 2008, by Pascal "Pixel" Rigaux

- add URPM::Package->changelogs, a wrapper around ->changelog_time, ->changelog_name, ->changelog_text
- resolve kmod requires even if first choice is a source dkms

Version 3.05 - 8 January 2008, by Pascal "Pixel" Rigaux

- fix regression in ->parse_rpm (introduced in 3.00) 
  (was breaking genhdlist2 and mkcd)

Version 3.04 - 20 December 2007, by Pascal "Pixel" Rigaux

- fix regression in parse_pubkeys() (introduced in 3.00) (#36121)

Version 3.03 - 14 December 2007, by Pascal "Pixel" Rigaux

- suggests: 
  handle both RPMTAG_SUGGESTSNAME (as done in SuSE and in Mandriva > 2008.0)
  and RPMTAG_REQUIRENAME + RPMSENSE_MISSINGOK (as done in Mandriva 2008.0)

Version 3.02 - 14 December 2007, by Pascal "Pixel" Rigaux

- fix "make test" on rpm 4.4.2.2
- fix rpm 4.5 support

Version 3.01 - 11 December 2007, by Pascal "Pixel" Rigaux

- add URPM::DB::verify()

Version 3.00 - 11 December 2007, by Pascal "Pixel" Rigaux

- replace ->import_needed_pubkeys and ->import_pubkey in favor of
  import_needed_pubkeys_from_file() and ->import_pubkey_file
  (! this breaks API !)
- drop $package->upgrade_files() (unused for a long time afaik)
- rpm.org HEAD support

Version 2.10 - 22 November 2007, by Pascal "Pixel" Rigaux

- much simpler --auto-select algorithm 
  (fixes #35718, ie auto-selecting with strict-arch)